---

* [Bug 1467] Fix bogus rebuild of sntp/sntp.html

---
(4.2.6p1-RC3) 2010/01/24 Released by Harlan Stenn <stenn@ntp.org>

* Use TZ=UTC instead of TZ= when calling date in scripts/mkver.in .
* [Bug 1448] Some macros not correctly conditionally or absolutely defined
  on Windows.
* [Bug 1449] ntpsim.h in ntp_config.c should be used conditionally.
* [Bug 1450] Option to exclude warnings not unconditionally defined on Windows.
* [Bug 1127] Properly check the return of X590_verify() - missed one.
* [Bug 1439] .texi generation must wait until after binary is linked.
* [Bug 1440] Update configure.ac to support kfreebsd.
* [Bug 1445] IRIX does not have -lcap or support linux capabilities.
* [Bug 1451] CID 115: sntp leaks KoD entry when updating existing.
* [Bug 1453] Use $CC in config.cache filename in ./build script.

---
(4.2.6p1-RC2) 2009/12/25 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1411] Fix status messages in refclock_oncore.c.
* [Bug 1416] MAXDNAME undefined on Solaris 2.6.
* [Bug 1419] ntpdate, ntpdc, sntp, ntpd ignore configure --bindir.
* [Bug 1424] Fix check for rtattr (rtnetlink.h).
* [Bug 1425] unpeer by association ID sets up for duplicate free().
* [Bug 1426] scripts/VersionName needs . on the search path.
* [Bug 1427] quote missing in ./build - shows up on NetBSD.
* [Bug 1428] Use AC_HEADER_RESOLV to fix breaks from resolv.h
* [Bug 1429] ntpd -4 option does not reliably force IPv4 resolution.
* [Bug 1431] System headers must come before ntp headers in ntp_intres.c .
* [Bug 1434] HP-UX 11 ip_mreq undeclared, _HPUX_SOURCE helps some.
* [Bug 1435] sntp: Test for -lresolv using the same tests as in ntp.

---
(4.2.6p1-RC1) 2009/12/20 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1409] Put refclock_neoclock4x.c under the NTP COPYRIGHT notice.
  This should allow debian and other distros to add this refclock driver
  in further distro releases.
  Detect R2 hardware releases.
* [Bug 1412] m4/os_cflags.m4 caches results that depend on $CC.