@@ -106,13 +106,12 @@ done
 
 ## EOAutoGen stuff
 
-# Yacc/bison files
+# Yacc/bison files ntp_parser.[ch] so we don't require the tool if
+# ntp_parser.y hasn't been updated.  At the same time, keyword-gen-utd
+# and ntp_keyword.h which are derived from ntp_parser.h and
+# keyword-gen.c.
 
-touch ntpd/ntp_parser.[ch]
-
-# generated by ntpd/keyword-gen.c
-
-touch ntpd/ntp_keyword.h
+touch ntpd/ntp_parser.[ch] ntpd/keyword-gen-utd ntpd/ntp_keyword.h
 
 cp bincheck.mf sntp/
 cp depsver.mf sntp/
